--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,8 @@ body {
   margin: auto;
   background-color: var(--primaty-grey-light, #F6F5F4);
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
